<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/treechamp"
    android:orientation="horizontal"
    tools:context=".ChampActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="22dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginTop="65dp"
            android:text="@string/tv_user"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginTop="36dp"
            android:text="@string/bot_1"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginTop="60dp"
            android:text="@string/bot_2"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginTop="36dp"
            android:text="@string/bot_3"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="93dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginTop="140dp"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="168dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="43dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginTop="140dp"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="105dp"

        android:orientation="vertical">

        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginTop="65dp"
            android:text="@string/bot_4"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginTop="36dp"
            android:text="@string/bot_5"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginTop="60dp"
            android:text="@string/bot_6"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginTop="36dp"
            android:text="@string/bot_7"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"/>

        <Button
            android:id="@+id/btnPlayTour"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/play"/>


    </LinearLayout>
</LinearLayout>